# firmware_tools

./: CMakeLists.txt  README.md
firmware_tools/: firmware_update.py
